[project]
name = "REPLACE_ME"
version = "0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "ruff==0.15.18",
  "ty==0.0.51",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  # conflicting rules
  "D203",
  "D212",
  "COM812",
  # useful annotations
  "FIX001",
  "FIX002",
  "TD001",
  "TD002",
  "TD003",
]
